--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=/Users/denny.deng/Library/Android/sdk
-flutter.sdk=/Users/denny.deng/fvm/versions/3.0.1
+sdk.dir=/Users/abkorat/Library/Android/sdk
+flutter.sdk=/Users/abkorat/fvm/versions/stable
 flutter.versionName=0.0.2
